<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/splash_screen_back_colour"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@drawable/splash_screen_back_colour"/>


    <androidx.cardview.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="420dp"
    app:cardCornerRadius="10sp"
    app:cardElevation="7sp"
    app:cardUseCompatPadding="true">

    <RelativeLayout
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/splash_screen_back_colour">

        <EditText
            android:layout_marginTop="30sp"
            android:id="@+id/shayri"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:gravity="center"
            android:padding="16sp"
            android:text="@string/text_shayari"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold|italic"/>

        <de.hdodenhof.circleimageview.CircleImageView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/profile_image"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:layout_above="@id/name"
            android:layout_centerHorizontal="true"
            android:src="@drawable/friends"
            app:civ_border_width="2dp"
            app:civ_border_color="#FF000000"/>

        <EditText
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:gravity="center"
            android:padding="10sp"
            android:hint="Enter Name..."
            android:layout_centerHorizontal="true"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:layout_marginBottom="10sp"
            android:layout_alignParentBottom="true"
            android:textStyle="bold|italic"/>

    </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_marginTop="5sp"
        android:layout_marginLeft="5sp"
        android:layout_marginRight="5sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="100dp"
            android:layout_height="40dp"
            app:cardCornerRadius="3sp"
            app:cardElevation="4sp"
            android:layout_marginLeft="10sp"
            android:layout_marginRight="10sp">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/text_color"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/gradient_d"
                android:textColor="@color/black"
                android:layout_weight="1"
                android:textSize="11sp"
                android:drawableStart="@drawable/baseline_text_color"
                android:text="@string/text_color">
            </androidx.appcompat.widget.AppCompatButton>

        </com.google.android.material.card.MaterialCardView>





        <com.google.android.material.card.MaterialCardView
            android:layout_width="100dp"
            android:layout_height="40dp"
            app:cardCornerRadius="3sp"
            app:cardElevation="4sp"
            android:layout_marginLeft="10sp"
            android:layout_marginRight="10sp">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/images"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/gradiant_g"
                android:textColor="@color/black"
                android:layout_weight="1"
                android:textSize="12sp"
                android:drawableStart="@drawable/baseline_image"
                android:text="@string/images"/>
        </com.google.android.material.card.MaterialCardView>





        <com.google.android.material.card.MaterialCardView
            android:layout_width="100dp"
            android:layout_height="40dp"
            app:cardCornerRadius="3sp"
            app:cardElevation="4sp"
            android:layout_marginLeft="10sp"
            android:layout_marginRight="10sp">



        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/gradiant"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/gradiant_b"
            android:textColor="@color/black"
            android:layout_weight="1"
            android:textSize="11sp"
            android:drawableStart="@drawable/baseline_gradient"
            android:text="@string/gradiant">
        </androidx.appcompat.widget.AppCompatButton>
        </com.google.android.material.card.MaterialCardView>


    </LinearLayout>


    <LinearLayout
        android:layout_marginTop="5sp"
        android:layout_marginLeft="5sp"
        android:layout_marginRight="5sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">



        <com.google.android.material.card.MaterialCardView
            android:layout_width="102dp"
            android:layout_height="40dp"
            app:cardCornerRadius="3sp"
            app:cardElevation="4sp"
            android:layout_marginLeft="10sp"
            android:layout_marginRight="10sp">


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/background"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/splash_screen_back_colour"
                android:textColor="@color/black"
                android:layout_weight="1"
                android:textSize="11sp"
                android:drawableStart="@drawable/baseline_background"
                android:text="@string/background"/>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="100dp"
            android:layout_height="40dp"
            app:cardCornerRadius="3sp"
            app:cardElevation="4sp"
            android:layout_marginLeft="10sp"
            android:layout_marginRight="10sp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/status"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/gradiant_e"
            android:textColor="@color/black"
            android:layout_weight="1"
            android:textSize="11sp"
            android:drawableStart="@drawable/baseline_status"
            android:text="@string/status"/>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="100dp"
            android:layout_height="40dp"
            app:cardCornerRadius="3sp"
            app:cardElevation="4sp"
            android:layout_marginLeft="10sp"
            android:layout_marginRight="10sp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/share"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/gradiant_f"
            android:textColor="@color/black"
            android:layout_weight="1"
            android:textSize="12sp"
            android:drawableStart="@drawable/baseline_share"
            android:text="@string/share">
        </androidx.appcompat.widget.AppCompatButton>

        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>


    <LinearLayout
        android:layout_marginTop="5sp"
        android:layout_marginLeft="5sp"
        android:layout_marginRight="5sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">



        <com.google.android.material.card.MaterialCardView
            android:layout_width="102dp"
            android:layout_height="40dp"
            app:cardCornerRadius="3sp"
            app:cardElevation="4sp"
            android:layout_marginLeft="10sp"
            android:layout_marginRight="10sp">


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/save"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/gradiant_b"
                android:textColor="@color/black"
                android:layout_weight="1"
                android:textSize="11sp"
                android:drawableStart="@drawable/baseline_save"
                android:text="@string/save"/>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="100dp"
            android:layout_height="40dp"
            app:cardCornerRadius="3sp"
            app:cardElevation="4sp"
            android:layout_marginLeft="10sp"
            android:layout_marginRight="10sp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/gallery"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/gradiant_e"
            android:textColor="@color/black"
            android:layout_weight="1"
            android:textSize="12sp"
            android:drawableStart="@drawable/baseline_photo"
            android:text="@string/gallery"/>

        </com.google.android.material.card.MaterialCardView>


    </LinearLayout>


    <com.google.android.gms.ads.AdView
        android:layout_marginTop="60sp"
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        ads:adSize="BANNER"
        ads:adUnitId="@string/editad"/>

</LinearLayout>