<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash_screen_back_colour"
    android:orientation="vertical"
    tools:context=".Frag_cattegorys">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                app:cardCornerRadius="5sp"
                app:cardElevation="5sp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/gradient_c"
                    android:orientation="horizontal">

                    <ImageView
                        style="@style/Drawerstart"
                        android:src="@drawable/royal" />

                    <TextView
                        android:id="@+id/royal"
                        style="@style/TextStyle"
                        android:text="royal" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                app:cardCornerRadius="5sp"
                app:cardElevation="5sp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/gradiant_e"
                    android:orientation="horizontal">

                    <ImageView
                        style="@style/Drawerstart"
                        android:src="@drawable/attitude" />


                    <TextView
                        android:id="@+id/attitude"
                        style="@style/TextStyle"
                        android:text="@string/attitude" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                app:cardCornerRadius="5sp"
                app:cardElevation="5sp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/gradiant_f"
                    android:orientation="horizontal">

                    <ImageView
                        style="@style/Drawerstart"
                        android:src="@drawable/mahakal" />


                    <TextView
                        android:id="@+id/mahakal"
                        style="@style/TextStyle"
                        android:text="@string/mahakal"></TextView>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                app:cardCornerRadius="5sp"
                app:cardElevation="5sp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/gradiant_b"
                    android:orientation="horizontal">

                    <ImageView
                        style="@style/Drawerstart"
                        android:src="@drawable/friends" />

                    <TextView
                        android:id="@+id/dosti"
                        style="@style/TextStyle"
                        android:text="@string/dosti" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                app:cardCornerRadius="5sp"
                app:cardElevation="5sp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/gradiant_g"
                    android:orientation="horizontal">

                    <ImageView
                        style="@style/Drawerstart"
                        android:src="@drawable/happy" />

                    <TextView
                        android:id="@+id/mohabat"
                        style="@style/TextStyle"
                        android:text="@string/mohabat" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                app:cardCornerRadius="5sp"
                app:cardElevation="5sp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/gradiant_e"
                    android:orientation="horizontal">

                    <ImageView
                        style="@style/Drawerstart"
                        android:src="@drawable/sad" />

                    <TextView
                        android:id="@+id/sad"
                        style="@style/TextStyle"
                        android:text="@string/sad" />


                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                app:cardCornerRadius="5sp"
                app:cardElevation="5sp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/gradient_c"
                    android:orientation="horizontal">

                    <ImageView
                        style="@style/Drawerstart"
                        android:src="@drawable/good_morning" />

                    <TextView
                        android:id="@+id/good_morning"
                        style="@style/TextStyle"
                        android:text="@string/goog_morning" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                app:cardCornerRadius="5sp"
                app:cardElevation="5sp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/gradient_d"
                    android:orientation="horizontal">

                    <ImageView
                        style="@style/Drawerstart"
                        android:src="@drawable/good_night" />


                    <TextView
                        android:id="@+id/good_night"
                        style="@style/TextStyle"
                        android:text="@string/good_night"></TextView>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                app:cardCornerRadius="5sp"
                app:cardElevation="5sp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/gradiant_b"
                    android:orientation="horizontal">

                    <ImageView
                        style="@style/Drawerstart"
                        android:src="@drawable/dard" />

                    <TextView
                        android:id="@+id/dard"
                        style="@style/TextStyle"
                        android:text="@string/dard" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                app:cardCornerRadius="5sp"
                app:cardElevation="5sp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/gradiant_g"
                    android:orientation="horizontal">

                    <ImageView
                        style="@style/Drawerstart"
                        android:src="@drawable/happy" />

                    <TextView
                        android:id="@+id/funny"
                        style="@style/TextStyle"
                        android:text="@string/funny" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                app:cardCornerRadius="5sp"
                app:cardElevation="5sp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/gradiant_f"
                    android:orientation="horizontal">

                    <ImageView
                        style="@style/Drawerstart"
                        android:src="@drawable/miss_you" />

                    <TextView
                        android:id="@+id/miss_you"
                        style="@style/TextStyle"
                        android:text="@string/miss_you" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>


        </LinearLayout>

    </ScrollView>

</LinearLayout>